# shortcut-autotyper

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: combinations.rs  command.rs  content.rs  error.rs  lib.rs  main.rs  sequence.rs  typer.rs
