[package]
name = "shortcut-autotyper"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["autotyper", "shortcut"]
readme = "README.md"
description = "Shortcut AutoTyper is a command-line tool for automating repetitive typing tasks using predefined shortcuts defined in a JSON configuration file. Simply configure your shortcuts and let AutoTyper do the typing for you."
categories = ["command-line-utilities"]
repository = "https://github.com/Fanteria/shortcut-autotyper"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
