[package]
name = "shortcut-autotyper"
authors = ["Jiří Alexandrovič"]
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["autotyper", "shortcut"]
readme = "README.md"
description = "Shortcut AutoTyper is a command-line tool for automating repetitive typing tasks using predefined shortcuts defined in a JSON configuration file. Simply configure your shortcuts and let AutoTyper do the typing for you."
categories = ["command-line-utilities"]
repository = "https://github.com/Fanteria/shortcut-autotyper"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
clap = { version = "4.4", features = ["derive", "wrap_help", "env"] }
clap_complete = "4.4"
